# w02

./: .gitpod.Dockerfile  README.md  hie.yaml  w02.cabal  weeklylab.cabal
.github/workflows/: ci.yml
app/: W020201.hs  W020202.hs  W020203.hs
docs/: README.md
src/: P02.hs  P03.hs  P05.hs  W0201.hs  W0202.hs  W0203.hs  W0204.hs  W0205.hs
test/: P05Spec.hs  W0201Spec.hs  W0202Spec.hs  W0203Spec.hs  W0204Spec.hs  W0205Spec.hs
