cabal-version:         3.4
name:                  w02
version:               0.1
build-type:            Simple
extra-source-files:    README.md

common common
  build-depends:       base ^>= 4.16.4.0
  ghc-options:         -Wall
  hs-source-dirs:      src

common exe
  import:              common
  hs-source-dirs:      app
  build-depends:       w02
  other-modules:       W0202
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

library
  import:              common
  Exposed-Modules:     W0201
                     , W0202
                     , W0203
                     , W0204
  build-depends:       containers
                     , random

executable w020201
  import:              exe
  main-is:             W020201.hs

executable w020202
  import:              exe
  main-is:             W020202.hs

executable w020203
  import:              exe
  main-is:             W020203.hs

test-suite w02-doctests
  import:              common
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       doctest       
                     , template-haskell
  ghc-options:         -threaded
  hs-source-dirs:      doctest
